# pharmacy

./: .gitattributes  .gitignore  README.md  Sphinx and RST Cheat Sheet.docx  __init__.py  pypharm.py  rxfile.py  test.http
api/: dea.py  npi.py  openfda.py  sentry.py
api/StateData.Illinois/: download_license.csv  query_licenses.py
api/npi/: npi.md
diagrams/: objectcombomap.rst
ndc/: ndc regex.docx
source/: conf.py  index.rst  standardcolumnnames.rst
src/pharmacy/: .gitattributes  README.md  README.rst  pyproject.toml
src/pharmacy/archive/: README.rst  _pyproject 2023-10-22.toml  fuzzyjoin_old20231025.py
src/pharmacy/examples/: example a.xlsx  examples_readme.md  readme.md
src/pharmacy/pharmacy/: __init__.py  __main__.py  fuzzyjoin.py
src/pharmacy/pharmacy/fuzzyjoin/: __init__.py
src/pharmacy/tests/: test_pharmacy.py
src/pharmacy/unit_tests/: test_pharmacy.py
standard_pharmacy_dataset/: fake_lastnames.txt  peoplemaker.py
