[tool.poetry]
name = "pharmacy"
version = "0.4.7"
description = "The pharmacy module is a set of utilities for use with hospital and retail pharmacy data."
authors = ["Danny Limoges <drlimoges@gmail.com>"]
license = "AGPL-3.0-or-later"
readme = "README.md"
classifiers = [
    "Development Status :: 1 - Planning",
    "Intended Audience :: Healthcare Industry",
    "Intended Audience :: Science/Research",
    "Natural Language :: English",
    "Topic :: Software Development :: Build Tools",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Topic :: Scientific/Engineering :: Information Analysis",
    "Topic :: Scientific/Engineering :: Medical Science Apps."

]

[tool.poetry.dependencies]
python = "^3.10"
thefuzz = "^0.20.0"
pandas = "^1.00.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.bumpver]
current_version = "0.4.7"
version_pattern = "MAJOR.MINOR.PATCH"
commit_message = "bump version {old_version} -> {new_version}"
commit = true
tag = true
push = true

[tool.bumpver.file_patterns]
"pyproject.toml" = [    'version = "{version}"' ]
"pharmacy/__init__.py" = ["__version__ = '{version}'"]
"pharmacy/__main__.py" = ["{version}"]
"pharmacy/fuzzyjoin/__init__.py" = ["__version__ = '{version}'"]
"README.md" = ["__version__ = '{version}'"]
"examples/examples_readme.md" = ["__version__ = {version}"]

